# manageiq_qe_provider_template

./: setup.cfg
template_provider/: __init__.py
