[metadata]
name = manageiq_qe_provider_template
author = Peter Savage
author-email = psavage@redhat.com
summary = A template provider for integration_tests
description-file = README.rst
license = GPL2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    template_provider

[entry_points]
manageiq.provider_types.template_provider =
    my_template_provider = template_provider:MyTemplateProvider
manageiq.provider_categories =
    template_provider = template_provider:TemplateProvider

[wheel]
universal=1